# gigabloat_proto

./: .gitignore  MANIFEST.in  Makefile  README.md  __init__.py  gigabloat.proto  index.js  package-lock.json  package.json  pyproject.toml  setup.py
gigabloat_proto/: __init__.py
protobloat/: __init__.py  gigabloat_pb2.py  gigabloat_pb2_grpc.py
